Fase4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkSalto

Grammar

Rule 0     S' -> S
Rule 1     S -> TkWith Lista_Declaraciones Bloque_Inst
Rule 2     S -> Bloque_Inst
Rule 3     Lista_Declaraciones -> TkVar Lista_Variables Lista_Declaraciones
Rule 4     Lista_Declaraciones -> TkVar Lista_Variables
Rule 5     Lista_Variables -> TkId TkComa Lista_Variables
Rule 6     Lista_Variables -> TkId TkAsignacion Operacion TkComa Lista_Variables
Rule 7     Lista_Variables -> TkId TkAsignacion Operacion TkDosPuntos Tipo
Rule 8     Lista_Variables -> TkId TkDosPuntos Tipo
Rule 9     Tipo -> TkInt
Rule 10    Tipo -> TkBool
Rule 11    Tipo -> TkChar
Rule 12    Tipo -> TkArray TkCorcheteAbre Operacion TkCorcheteCierra TkOf Tipo
Rule 13    Tipo -> TkArray TkCorcheteAbre Operacion TkCorcheteCierra TkOf TkId
Rule 14    Bloque_Inst -> TkBegin Lista_Instrucciones TkEnd
Rule 15    Bloque_Inst -> TkBegin TkEnd
Rule 16    Inst -> Inst_Asignacion
Rule 17    Inst -> Inst_If
Rule 18    Inst -> Inst_Bool
Rule 19    Inst -> Inst_For
Rule 20    Inst -> Inst_Entrada
Rule 21    Inst -> Inst_Salida
Rule 22    Inst -> Inst_Punto
Rule 23    Inst -> S
Rule 24    Inst_Punto -> TkId TkPunto Operacion TkPuntoYComa
Rule 25    Lista_Instrucciones -> Inst
Rule 26    Lista_Instrucciones -> Inst Lista_Instrucciones
Rule 27    Inst_If -> TkIf Operacion TkHacer Lista_Instrucciones TkEnd
Rule 28    Inst_If -> TkIf Operacion TkHacer Lista_Instrucciones TkOtherwise TkHacer Lista_Instrucciones TkEnd
Rule 29    Inst_Bool -> TkWhile Operacion TkHacer Lista_Instrucciones TkEnd
Rule 30    Inst_For -> TkFor TkId TkFrom Operacion TkTo Operacion TkHacer Inst TkEnd
Rule 31    Inst_For -> TkFor TkId TkFrom Operacion TkTo Operacion TkStep Operacion TkHacer Inst TkEnd
Rule 32    Operacion -> TkParAbre Operacion TkParCierra
Rule 33    Operacion -> Operacion TkSuma Operacion
Rule 34    Operacion -> Operacion TkResta Operacion
Rule 35    Operacion -> Operacion TkMult Operacion
Rule 36    Operacion -> Operacion TkDiv Operacion
Rule 37    Operacion -> Operacion TkMod Operacion
Rule 38    Operacion -> TkResta Operacion
Rule 39    Operacion -> Operacion TkMenor Operacion
Rule 40    Operacion -> Operacion TkMenorIgual Operacion
Rule 41    Operacion -> Operacion TkMayor Operacion
Rule 42    Operacion -> Operacion TkMayorIgual Operacion
Rule 43    Operacion -> Operacion TkIgual Operacion
Rule 44    Operacion -> Operacion TkDesigual Operacion
Rule 45    Operacion -> Operacion TkConjuncion Operacion
Rule 46    Operacion -> Operacion TkDisyuncion Operacion
Rule 47    Operacion -> TkNegacion Operacion
Rule 48    Operacion -> OpCaracter
Rule 49    Operacion -> Op_Arreglo
Rule 50    Operacion -> TkId
Rule 51    Operacion -> TkNum
Rule 52    Operacion -> TkTrue
Rule 53    Operacion -> TkFalse
Rule 54    Operacion -> TkCaracter
Rule 55    Op_Arreglo -> TkId TkCorcheteAbre Operacion TkCorcheteCierra
Rule 56    Op_Arreglo -> TkShift TkId
Rule 57    Op_Arreglo -> TkId TkConca TkId
Rule 58    Op_Arreglo -> Op_Arreglo TkCorcheteAbre Operacion TkCorcheteCierra
Rule 59    Op_Arreglo -> TkShift Op_Arreglo
Rule 60    Op_Arreglo -> Op_Arreglo TkConca TkId
Rule 61    Op_Arreglo -> Op_Arreglo TkConca Op_Arreglo
Rule 62    Op_Arreglo -> TkId TkConca Op_Arreglo
Rule 63    OpCaracter -> TkCaracter TkSiguienteCar
Rule 64    OpCaracter -> TkCaracter TkAnteriorCar
Rule 65    OpCaracter -> TkValorAscii TkCaracter
Rule 66    OpCaracter -> TkId TkSiguienteCar
Rule 67    OpCaracter -> TkId TkAnteriorCar
Rule 68    OpCaracter -> TkValorAscii TkId
Rule 69    OpCaracter -> OpCaracter TkSiguienteCar
Rule 70    OpCaracter -> OpCaracter TkAnteriorCar
Rule 71    OpCaracter -> TkValorAscii OpCaracter
Rule 72    Inst_Asignacion -> TkId TkAsignacion Operacion TkPuntoYComa
Rule 73    Inst_Asignacion -> Op_Arreglo TkAsignacion Operacion TkPuntoYComa
Rule 74    Inst_Salida -> TkPrint Operacion TkPuntoYComa
Rule 75    Inst_Entrada -> TkRead TkId TkPuntoYComa

Terminals, with rules where they appear

TkAnteriorCar        : 64 67 70
TkArray              : 12 13
TkAsignacion         : 6 7 72 73
TkBegin              : 14 15
TkBool               : 10
TkCaracter           : 54 63 64 65
TkChar               : 11
TkComa               : 5 6
TkConca              : 57 60 61 62
TkConjuncion         : 45
TkCorcheteAbre       : 12 13 55 58
TkCorcheteCierra     : 12 13 55 58
TkDesigual           : 44
TkDisyuncion         : 46
TkDiv                : 36
TkDosPuntos          : 7 8
TkEnd                : 14 15 27 28 29 30 31
TkFalse              : 53
TkFor                : 30 31
TkFrom               : 30 31
TkHacer              : 27 28 28 29 30 31
TkId                 : 5 6 7 8 13 24 30 31 50 55 56 57 57 60 62 66 67 68 72 75
TkIf                 : 27 28
TkIgual              : 43
TkInt                : 9
TkMayor              : 41
TkMayorIgual         : 42
TkMenor              : 39
TkMenorIgual         : 40
TkMod                : 37
TkMult               : 35
TkNegacion           : 47
TkNum                : 51
TkOf                 : 12 13
TkOtherwise          : 28
TkParAbre            : 32
TkParCierra          : 32
TkPrint              : 74
TkPunto              : 24
TkPuntoYComa         : 24 72 73 74 75
TkRead               : 75
TkResta              : 34 38
TkSalto              : 
TkShift              : 56 59
TkSiguienteCar       : 63 66 69
TkStep               : 31
TkSuma               : 33
TkTo                 : 30 31
TkTrue               : 52
TkValorAscii         : 65 68 71
TkVar                : 3 4
TkWhile              : 29
TkWith               : 1
error                : 

Nonterminals, with rules where they appear

Bloque_Inst          : 1 2
Inst                 : 25 26 30 31
Inst_Asignacion      : 16
Inst_Bool            : 18
Inst_Entrada         : 20
Inst_For             : 19
Inst_If              : 17
Inst_Punto           : 22
Inst_Salida          : 21
Lista_Declaraciones  : 1 3
Lista_Instrucciones  : 14 26 27 28 28 29
Lista_Variables      : 3 4 5 6
OpCaracter           : 48 69 70 71
Op_Arreglo           : 49 58 59 60 61 61 62 73
Operacion            : 6 7 12 13 24 27 28 29 30 30 31 31 31 32 33 33 34 34 35 35 36 36 37 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 55 58 72 73 74
S                    : 23 0
Tipo                 : 7 8 12

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . TkWith Lista_Declaraciones Bloque_Inst
    (2) S -> . Bloque_Inst
    (14) Bloque_Inst -> . TkBegin Lista_Instrucciones TkEnd
    (15) Bloque_Inst -> . TkBegin TkEnd

    TkWith          shift and go to state 1
    TkBegin         shift and go to state 3

    S                              shift and go to state 4
    Bloque_Inst                    shift and go to state 2

state 1

    (1) S -> TkWith . Lista_Declaraciones Bloque_Inst
    (3) Lista_Declaraciones -> . TkVar Lista_Variables Lista_Declaraciones
    (4) Lista_Declaraciones -> . TkVar Lista_Variables

    TkVar           shift and go to state 6

    Lista_Declaraciones            shift and go to state 5

state 2

    (2) S -> Bloque_Inst .

    $end            reduce using rule 2 (S -> Bloque_Inst .)
    TkId            reduce using rule 2 (S -> Bloque_Inst .)
    TkIf            reduce using rule 2 (S -> Bloque_Inst .)
    TkWhile         reduce using rule 2 (S -> Bloque_Inst .)
    TkFor           reduce using rule 2 (S -> Bloque_Inst .)
    TkRead          reduce using rule 2 (S -> Bloque_Inst .)
    TkPrint         reduce using rule 2 (S -> Bloque_Inst .)
    TkWith          reduce using rule 2 (S -> Bloque_Inst .)
    TkShift         reduce using rule 2 (S -> Bloque_Inst .)
    TkBegin         reduce using rule 2 (S -> Bloque_Inst .)
    TkEnd           reduce using rule 2 (S -> Bloque_Inst .)
    TkOtherwise     reduce using rule 2 (S -> Bloque_Inst .)


state 3

    (14) Bloque_Inst -> TkBegin . Lista_Instrucciones TkEnd
    (15) Bloque_Inst -> TkBegin . TkEnd
    (25) Lista_Instrucciones -> . Inst
    (26) Lista_Instrucciones -> . Inst Lista_Instrucciones
    (16) Inst -> . Inst_Asignacion
    (17) Inst -> . Inst_If
    (18) Inst -> . Inst_Bool
    (19) Inst -> . Inst_For
    (20) Inst -> . Inst_Entrada
    (21) Inst -> . Inst_Salida
    (22) Inst -> . Inst_Punto
    (23) Inst -> . S
    (72) Inst_Asignacion -> . TkId TkAsignacion Operacion TkPuntoYComa
    (73) Inst_Asignacion -> . Op_Arreglo TkAsignacion Operacion TkPuntoYComa
    (27) Inst_If -> . TkIf Operacion TkHacer Lista_Instrucciones TkEnd
    (28) Inst_If -> . TkIf Operacion TkHacer Lista_Instrucciones TkOtherwise TkHacer Lista_Instrucciones TkEnd
    (29) Inst_Bool -> . TkWhile Operacion TkHacer Lista_Instrucciones TkEnd
    (30) Inst_For -> . TkFor TkId TkFrom Operacion TkTo Operacion TkHacer Inst TkEnd
    (31) Inst_For -> . TkFor TkId TkFrom Operacion TkTo Operacion TkStep Operacion TkHacer Inst TkEnd
    (75) Inst_Entrada -> . TkRead TkId TkPuntoYComa
    (74) Inst_Salida -> . TkPrint Operacion TkPuntoYComa
    (24) Inst_Punto -> . TkId TkPunto Operacion TkPuntoYComa
    (1) S -> . TkWith Lista_Declaraciones Bloque_Inst
    (2) S -> . Bloque_Inst
    (55) Op_Arreglo -> . TkId TkCorcheteAbre Operacion TkCorcheteCierra
    (56) Op_Arreglo -> . TkShift TkId
    (57) Op_Arreglo -> . TkId TkConca TkId
    (58) Op_Arreglo -> . Op_Arreglo TkCorcheteAbre Operacion TkCorcheteCierra
    (59) Op_Arreglo -> . TkShift Op_Arreglo
    (60) Op_Arreglo -> . Op_Arreglo TkConca TkId
    (61) Op_Arreglo -> . Op_Arreglo TkConca Op_Arreglo
    (62) Op_Arreglo -> . TkId TkConca Op_Arreglo
    (14) Bloque_Inst -> . TkBegin Lista_Instrucciones TkEnd
    (15) Bloque_Inst -> . TkBegin TkEnd

    TkEnd           shift and go to state 10
    TkId            shift and go to state 14
    TkIf            shift and go to state 22
    TkWhile         shift and go to state 16
    TkFor           shift and go to state 21
    TkRead          shift and go to state 24
    TkPrint         shift and go to state 13
    TkWith          shift and go to state 1
    TkShift         shift and go to state 17
    TkBegin         shift and go to state 3

    Inst_For                       shift and go to state 7
    Bloque_Inst                    shift and go to state 2
    Inst                           shift and go to state 12
    Inst_If                        shift and go to state 9
    S                              shift and go to state 18
    Inst_Salida                    shift and go to state 8
    Inst_Asignacion                shift and go to state 19
    Inst_Punto                     shift and go to state 20
    Lista_Instrucciones            shift and go to state 11
    Inst_Bool                      shift and go to state 23
    Inst_Entrada                   shift and go to state 25
    Op_Arreglo                     shift and go to state 15

state 4

    (0) S' -> S .



state 5

    (1) S -> TkWith Lista_Declaraciones . Bloque_Inst
    (14) Bloque_Inst -> . TkBegin Lista_Instrucciones TkEnd
    (15) Bloque_Inst -> . TkBegin TkEnd

    TkBegin         shift and go to state 3

    Bloque_Inst                    shift and go to state 26

state 6

    (3) Lista_Declaraciones -> TkVar . Lista_Variables Lista_Declaraciones
    (4) Lista_Declaraciones -> TkVar . Lista_Variables
    (5) Lista_Variables -> . TkId TkComa Lista_Variables
    (6) Lista_Variables -> . TkId TkAsignacion Operacion TkComa Lista_Variables
    (7) Lista_Variables -> . TkId TkAsignacion Operacion TkDosPuntos Tipo
    (8) Lista_Variables -> . TkId TkDosPuntos Tipo

    TkId            shift and go to state 27

    Lista_Variables                shift and go to state 28

state 7

    (19) Inst -> Inst_For .

    TkId            reduce using rule 19 (Inst -> Inst_For .)
    TkIf            reduce using rule 19 (Inst -> Inst_For .)
    TkWhile         reduce using rule 19 (Inst -> Inst_For .)
    TkFor           reduce using rule 19 (Inst -> Inst_For .)
    TkRead          reduce using rule 19 (Inst -> Inst_For .)
    TkPrint         reduce using rule 19 (Inst -> Inst_For .)
    TkWith          reduce using rule 19 (Inst -> Inst_For .)
    TkShift         reduce using rule 19 (Inst -> Inst_For .)
    TkBegin         reduce using rule 19 (Inst -> Inst_For .)
    TkEnd           reduce using rule 19 (Inst -> Inst_For .)
    TkOtherwise     reduce using rule 19 (Inst -> Inst_For .)


state 8

    (21) Inst -> Inst_Salida .

    TkId            reduce using rule 21 (Inst -> Inst_Salida .)
    TkIf            reduce using rule 21 (Inst -> Inst_Salida .)
    TkWhile         reduce using rule 21 (Inst -> Inst_Salida .)
    TkFor           reduce using rule 21 (Inst -> Inst_Salida .)
    TkRead          reduce using rule 21 (Inst -> Inst_Salida .)
    TkPrint         reduce using rule 21 (Inst -> Inst_Salida .)
    TkWith          reduce using rule 21 (Inst -> Inst_Salida .)
    TkShift         reduce using rule 21 (Inst -> Inst_Salida .)
    TkBegin         reduce using rule 21 (Inst -> Inst_Salida .)
    TkEnd           reduce using rule 21 (Inst -> Inst_Salida .)
    TkOtherwise     reduce using rule 21 (Inst -> Inst_Salida .)


state 9

    (17) Inst -> Inst_If .

    TkId            reduce using rule 17 (Inst -> Inst_If .)
    TkIf            reduce using rule 17 (Inst -> Inst_If .)
    TkWhile         reduce using rule 17 (Inst -> Inst_If .)
    TkFor           reduce using rule 17 (Inst -> Inst_If .)
    TkRead          reduce using rule 17 (Inst -> Inst_If .)
    TkPrint         reduce using rule 17 (Inst -> Inst_If .)
    TkWith          reduce using rule 17 (Inst -> Inst_If .)
    TkShift         reduce using rule 17 (Inst -> Inst_If .)
    TkBegin         reduce using rule 17 (Inst -> Inst_If .)
    TkEnd           reduce using rule 17 (Inst -> Inst_If .)
    TkOtherwise     reduce using rule 17 (Inst -> Inst_If .)


state 10

    (15) Bloque_Inst -> TkBegin TkEnd .

    TkId            reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkIf            reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkWhile         reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkFor           reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkRead          reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkPrint         reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkWith          reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkShift         reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkBegin         reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkEnd           reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    TkOtherwise     reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)
    $end            reduce using rule 15 (Bloque_Inst -> TkBegin TkEnd .)


state 11

    (14) Bloque_Inst -> TkBegin Lista_Instrucciones . TkEnd

    TkEnd           shift and go to state 29


state 12

    (25) Lista_Instrucciones -> Inst .
    (26) Lista_Instrucciones -> Inst . Lista_Instrucciones
    (25) Lista_Instrucciones -> . Inst
    (26) Lista_Instrucciones -> . Inst Lista_Instrucciones
    (16) Inst -> . Inst_Asignacion
    (17) Inst -> . Inst_If
    (18) Inst -> . Inst_Bool
    (19) Inst -> . Inst_For
    (20) Inst -> . Inst_Entrada
    (21) Inst -> . Inst_Salida
    (22) Inst -> . Inst_Punto
    (23) Inst -> . S
    (72) Inst_Asignacion -> . TkId TkAsignacion Operacion TkPuntoYComa
    (73) Inst_Asignacion -> . Op_Arreglo TkAsignacion Operacion TkPuntoYComa
    (27) Inst_If -> . TkIf Operacion TkHacer Lista_Instrucciones TkEnd
    (28) Inst_If -> . TkIf Operacion TkHacer Lista_Instrucciones TkOtherwise TkHacer Lista_Instrucciones TkEnd
    (29) Inst_Bool -> . TkWhile Operacion TkHacer Lista_Instrucciones TkEnd
    (30) Inst_For -> . TkFor TkId TkFrom Operacion TkTo Operacion TkHacer Inst TkEnd
    (31) Inst_For -> . TkFor TkId TkFrom Operacion TkTo Operacion TkStep Operacion TkHacer Inst TkEnd
    (75) Inst_Entrada -> . TkRead TkId TkPuntoYComa
    (74) Inst_Salida -> . TkPrint Operacion TkPuntoYComa
    (24) Inst_Punto -> . TkId TkPunto Operacion TkPuntoYComa
    (1) S -> . TkWith Lista_Declaraciones Bloque_Inst
    (2) S -> . Bloque_Inst
    (55) Op_Arreglo -> . TkId TkCorcheteAbre Operacion TkCorcheteCierra
    (56) Op_Arreglo -> . TkShift TkId
    (57) Op_Arreglo -> . TkId TkConca TkId
    (58) Op_Arreglo -> . Op_Arreglo TkCorcheteAbre Operacion TkCorcheteCierra
    (59) Op_Arreglo -> . TkShift Op_Arreglo
    (60) Op_Arreglo -> . Op_Arreglo TkConca TkId
    (61) Op_Arreglo -> . Op_Arreglo TkConca Op_Arreglo
    (62) Op_Arreglo -> . TkId TkConca Op_Arreglo
    (14) Bloque_Inst -> . TkBegin Lista_Instrucciones TkEnd
    (15) Bloque_Inst -> . TkBegin TkEnd

    TkEnd           reduce using rule 25 (Lista_Instrucciones -> Inst .)
    TkOtherwise     reduce using rule 25 (Lista_Instrucciones -> Inst .)
    TkId            shift and go to state 14
    TkIf            shift and go to state 22
    TkWhile         shift and go to state 16
    TkFor           shift and go to state 21
    TkRead          shift and go to state 24
    TkPrint         shift and go to state 13
    TkWith          shift and go to state 1
    TkShift         shift and go to state 17
    TkBegin         shift and go to state 3

    Inst_For                       shift and go to state 7
    Bloque_Inst                    shift and go to state 2
    Inst                           shift and go to state 12
    Inst_If                        shift and go to state 9
    S                              shift and go to state 18
    Inst_Salida                    shift and go to state 8
    Inst_Asignacion                shift and go to state 19
    Inst_Punto                     shift and go to state 20
    Lista_Instrucciones            shift and go to state 30
    Inst_Bool                      shift and go to state 23
    Inst_Entrada                   shift and go to state 25
    Op_Arreglo                     shift and go to state 15

state 13

    (74) Inst_Salida -> TkPrint . Operacion TkPuntoYComa
    (32) Operacion -> . TkParAbre Operacion TkParCierra
    (33) Operacion -> . Operacion TkSuma Operacion
    (34) Operacion -> . Operacion TkResta Operacion
    (35) Operacion -> . Operacion TkMult Operacion
    (36) Operacion -> . Operacion TkDiv Operacion
    (37) Operacion -> . Operacion TkMod Operacion
    (38) Operacion -> . TkResta Operacion
    (39) Operacion -> . Operacion TkMenor Operacion
    (40) Operacion -> . Operacion TkMenorIgual Operacion
    (41) Operacion -> . Operacion TkMayor Operacion
    (42) Operacion -> . Operacion TkMayorIgual Operacion
    (43) Operacion -> . Operacion TkIgual Operacion
    (44) Operacion -> . Operacion TkDesigual Operacion
    (45) Operacion -> . Operacion TkConjuncion Operacion
    (46) Operacion -> . Operacion TkDisyuncion Operacion
    (47) Operacion -> . TkNegacion Operacion
    (48) Operacion -> . OpCaracter
    (49) Operacion -> . Op_Arreglo
    (50) Operacion -> . TkId
    (51) Operacion -> . TkNum
    (52) Operacion -> . TkTrue
    (53) Operacion -> . TkFalse
    (54) Operacion -> . TkCaracter
    (63) OpCaracter -> . TkCaracter TkSiguienteCar
    (64) OpCaracter -> . TkCaracter TkAnteriorCar
    (65) OpCaracter -> . TkValorAscii TkCaracter
    (66) OpCaracter -> . TkId TkSiguienteCar
    (67) OpCaracter -> . TkId TkAnteriorCar
    (68) OpCaracter -> . TkValorAscii TkId
    (69) OpCaracter -> . OpCaracter TkSiguienteCar
    (70) OpCaracter -> . OpCaracter TkAnteriorCar
    (71) OpCaracter -> . TkValorAscii OpCaracter
    (55) Op_Arreglo -> . TkId TkCorcheteAbre Operacion TkCorcheteCierra
    (56) Op_Arreglo -> . TkShift TkId
    (57) Op_Arreglo -> . TkId TkConca TkId
    (58) Op_Arreglo -> . Op_Arreglo TkCorcheteAbre Operacion TkCorcheteCierra
    (59) Op_Arreglo -> . TkShift Op_Arreglo
    (60) Op_Arreglo -> . Op_Arreglo TkConca TkId
    (61) Op_Arreglo -> . Op_Arreglo TkConca Op_Arreglo
    (62) Op_Arreglo -> . TkId TkConca Op_Arreglo

    TkParAbre       shift and go to state 32
    TkResta         shift and go to state 31
    TkNegacion      shift and go to state 38
    TkId            shift and go to state 36
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 42
    TkCaracter      shift and go to state 34
    TkValorAscii    shift and go to state 35
    TkShift         shift and go to state 17

    Operacion                      shift and go to state 39
    OpCaracter                     shift and go to state 40
    Op_Arreglo                     shift and go to state 37

state 14
